<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/locationLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/locationTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="-20dip"
        android:layout_marginTop="30dip"
        android:text="@string/locationLayoutText"
        android:textColor="@color/title_color"
        android:textSize="20dip"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/locationLayoutBreakLine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/locationTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dip"
        android:text="@string/breakLine"
        android:textColor="@color/title_color"
        android:textSize="20dip"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/addStateTextView"
        android:layout_width="wrap_content"
        android:layout_height="55dip"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/locationLayoutBreakLine"
        android:layout_toLeftOf="@+id/addStateButton"
        android:gravity="center_vertical"
        android:text="@string/genericAddState"
        android:textAppearance="@android:style/TextAppearance.Medium" />

    <Button
        android:id="@+id/addStateButton"
        android:layout_width="60dip"
        android:layout_height="60dip"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/locationLayoutBreakLine"
        android:onClick="addState"
        android:text="@string/add"
        android:textSize="30dip"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/addCountyTextView"
        android:layout_width="wrap_content"
        android:layout_height="55dip"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/addStateTextView"
        android:layout_toLeftOf="@+id/addCountyButton"
        android:gravity="center_vertical"
        android:text="@string/genericAddCounty"
        android:textAppearance="@android:style/TextAppearance.Medium"
        android:visibility="gone" />

    <Button
        android:id="@+id/addCountyButton"
        android:layout_width="60dip"
        android:layout_height="60dip"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/addStateButton"
        android:onClick="addCounty"
        android:text="@string/add"
        android:textSize="30dip"
        android:textStyle="bold"
        android:visibility="gone" />

    <EditText
        android:id="@+id/specificLocationTextBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/addCountyButton"
        android:hint="@string/specificLocationHint"
        android:visibility="gone" />

    <Button
        android:id="@+id/saveLocationButton"
        android:layout_width="100dip"
        android:layout_height="55dip"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/specificLocationTextBox"
        android:layout_marginLeft="30dip"
        android:layout_marginTop="30dip"
        android:gravity="center_vertical|center_horizontal"
        android:onClick="save"
        android:text="@string/save"
        android:textSize="20dip"
        android:textStyle="bold" />

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="100dip"
        android:layout_height="55dip"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/specificLocationTextBox"
        android:layout_marginRight="30dip"
        android:layout_marginTop="30dip"
        android:gravity="center_vertical|center_horizontal"
        android:onClick="cancel"
        android:text="@string/cancel"
        android:textSize="20dip"
        android:textStyle="bold" >
    </Button>

</RelativeLayout>