<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/highWindDetailBlock"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/highWindDetailTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="-20dip"
        android:layout_marginTop="30dip"
        android:text="@string/highWindDetailText"
        android:textColor="@color/title_color"
        android:textSize="20dip"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/highWindDetailBreakLine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/highWindDetailTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dip"
        android:text="@string/breakLine"
        android:textColor="@color/title_color"
        android:textSize="20dip"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/windSpeedTextView"
        android:layout_width="wrap_content"
        android:layout_height="55dip"
        android:layout_alignParentLeft="true"
        android:gravity="center_vertical"
        android:layout_alignBottom="@+id/addWindSpeed"
        android:layout_alignTop="@+id/addWindSpeed"
        android:layout_below="@+id/highWindDetailBreakLine"
        android:layout_toLeftOf="@+id/addWindSpeed"
        android:text="@string/genericWindSpeedText"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/addWindSpeed"
        android:layout_width="60dip"
        android:layout_height="60dip"
        android:layout_below="@+id/highWindDetailBreakLine"
        android:layout_alignParentRight="true"
        android:onClick="addWindSpeed"
        android:text="@string/add"
        android:textSize="30dip"
        android:textStyle="bold" />
    
    <TextView
        android:id="@+id/highWindMeasurementTextView"
        android:visibility="gone"
        android:layout_width="fill_parent"
        android:layout_height="55dip"
        android:layout_alignParentLeft="true"
        android:gravity="center_horizontal|center_vertical"
        android:layout_below="@+id/windSpeedTextView"
        android:text="@string/genericMeasurementTypeText"
        android:textAppearance="@android:style/TextAppearance.Medium" />
    
    <RadioButton 
        android:id="@+id/windMeasuredRadioButton"
        android:visibility="gone"
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content"
        android:layout_below="@+id/highWindMeasurementTextView"
        android:layout_alignParentLeft="true"
        android:layout_toLeftOf="@+id/windEstimatedRadioButton"
        android:text="@string/measured"
        android:onClick="windMeasured"
        android:layout_marginLeft="20dip"
        android:checked="false"
        />
    <RadioButton 
        android:id="@+id/windEstimatedRadioButton"
        android:visibility="gone"
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content"
        android:layout_below="@+id/highWindMeasurementTextView"
        android:layout_alignParentRight="true"
        android:text="@string/estimated"
        android:layout_marginRight="20dip"
        android:onClick="windEstimated"
        android:checked="true"
        />

</RelativeLayout>