<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/relativeLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/editText1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/button1"
            android:hint="@string/weatherTypeTextEditHint" />

        <Button
            android:id="@+id/buttonSaveLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/editText1"
            android:layout_alignBottom="@+id/editText1"
            android:layout_alignParentRight="true"
            android:text="@string/saveLocationButton" />

        <TextView
            android:id="@+id/textLocation"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/buttonSaveLocation"
            android:text="@string/DefaultLocation"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </RelativeLayout>
