<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/funnelCloudDetailBlock"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/funnelCloudDetailTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="-20dip"
        android:layout_marginTop="30dip"
        android:text="@string/funnelCloudDetailText"
        android:textColor="@color/title_color"
        android:textSize="20dip"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/funnelCloudDetailBreakLine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/funnelCloudDetailTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dip"
        android:text="@string/breakLine"
        android:textColor="@color/title_color"
        android:textSize="20dip"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/funnelCloudLocation"
        android:layout_width="wrap_content"
        android:layout_height="55dip"
        android:layout_below="@+id/funnelCloudDetailBreakLine"
        android:layout_toLeftOf="@+id/addfunnelCloudLocation"
        android:layout_alignParentLeft="true"
        android:gravity="center_vertical"
        android:text="@string/genericTornadoObservationText"
        android:textAppearance="@android:style/TextAppearance.Medium" />

    <Button
        android:id="@+id/addFunnelCloudLocation"
        android:layout_width="60dip"
        android:layout_height="60dip"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/funnelCloudDetailBreakLine"
        android:onClick="addFunnelCloudLocation"
        android:text="@string/add"
        android:textSize="30dip"
        android:textStyle="bold" />
    
    <TextView
        android:id="@+id/funnelCloudHeading"
        android:layout_width="wrap_content"
        android:layout_height="55dip"
        android:layout_below="@+id/funnelCloudLocation"
        android:layout_toLeftOf="@+id/addFunnelCloudHeading"
        android:layout_alignParentLeft="true"
        android:gravity="center_vertical"
        android:text="@string/genericTornadoDirectionText"
        android:textAppearance="@android:style/TextAppearance.Medium" />

    <Button
        android:id="@+id/addFunnelCloudHeading"
        android:layout_width="60dip"
        android:layout_height="60dip"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/addFunnelCloudLocation"
        android:onClick="addFunnelCloudHeading"
        android:text="@string/add"
        android:textSize="30dip"
        android:textStyle="bold" />
    
    <TextView
        android:id="@+id/funnelCloudAcrossCountyLineTextView"
        android:layout_width="wrap_content"
        android:layout_height="55dip"
        android:layout_below="@+id/funnelCloudHeading"
        android:layout_toLeftOf="@+id/funnelCloudAcrossCountyLineCheckBox"
        android:layout_alignParentLeft="true"
        android:gravity="center_vertical"
        android:text="@string/acrossCountyLine"
        android:layout_marginTop="15dip"
        android:textAppearance="@android:style/TextAppearance.Medium" />
    <CheckBox 
        android:id="@+id/funnelCloudAcrossCountyLineCheckBox"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/addFunnelCloudHeading"
		android:layout_marginRight="10dip"
        android:checked="false"
        android:text=""
        android:layout_marginTop="15dip"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:onClick="funnelCloudAcrossCountyLineCheck"
        />

</RelativeLayout>